--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2601,14 +2601,25 @@
 /* One */
 
 	#one:before {
-		/*background-image: url("../../images/banner.jpg");
+		background-image: url("../../images/banner.jpg");
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: cover;
 		content: '';
 		display: block;
 		height: 15em;
-		width: 100%;*/
+		width: 100%;
+	}
+
+	#onep:before {
+		background-image: url("../../images/banner2.jpg");
+		background-position: top right;
+		background-repeat: no-repeat;
+		background-size: cover;
+		content: '';
+		display: block;
+		height: 15em;
+		width: 100%;
 	}
 
 /* Footer 
