--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -889,3 +889,74 @@ section.main .content .markdown tbody tr:nth-child(odd) th {
   -webkit-shape-outside:circle();
   shape-outside:circle();
 }
+
+ul.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #ffffff;
+}
+
+/* Float the list items side by side */
+ul.topnav li {float: left;}
+
+/* Style the links inside the list items */
+ul.topnav li a {
+    display: inline-block;
+    color: #000000;
+    text-align: center;
+    padding: 10px 12px;
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 100$;
+}
+
+/* Change background color of links on hover */
+ul.topnav li a:hover {background-color: #ccffff;}
+
+/* Hide the list item that contains the link that should open and close the topnav on small screens */
+ul.topnav li.icon {display: none;}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+}
+
+/* Add rounded corners to the top left and the top right corner of the image */
+img {
+    border-radius: 5px 5px 0 0;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+    padding: 2px 9px;
+}
+
+h1 {
+	font-style: normal;
+	font-family: Open Sans, sans-serif;
+	font-size: 2.5em;
+}
+
+h1.thick {
+	font-weight: bold;
+}
+
+body {
+	font-size: 100%;
+}
+
+p {
+	font-family: Open Sans, sans-serif;
+}
+
+p.thick {
+	font-weight: bold;
+}
