--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -872,6 +872,7 @@ section.main .content .markdown tbody tr:nth-child(odd) th {
   background-color: #f7f7f7;
 }
 
+/* circle formatting */
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 #circle { 
   font-family: Open Sans, sans-serif; 
@@ -890,55 +891,11 @@ section.main .content .markdown tbody tr:nth-child(odd) th {
   shape-outside:circle();
 }
 
-ul.topnav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #ffffff;
+.curve:hover {
+	opacity: 0.7;
 }
 
-/* Float the list items side by side */
-ul.topnav li {float: left;}
-
-/* Style the links inside the list items */
-ul.topnav li a {
-    display: inline-block;
-    color: #000000;
-    text-align: center;
-    padding: 10px 12px;
-    text-decoration: none;
-    transition: 0.3s;
-    font-size: 100$;
-}
-
-/* Change background color of links on hover */
-ul.topnav li a:hover {background-color: #ccffff;}
-
-/* Hide the list item that contains the link that should open and close the topnav on small screens */
-ul.topnav li.icon {display: none;}
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px; /* 5px rounded corners */
-}
-
-/* Add rounded corners to the top left and the top right corner of the image */
-img {
-    border-radius: 5px 5px 0 0;
-}
-
-/* On mouse-over, add a deeper shadow */
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-/* Add some padding inside the card container */
-.container {
-    padding: 2px 9px;
-}
-
+/* text formatting */
 body {
 	font-size: 100%;
 }
@@ -961,16 +918,90 @@ p.thick {
 	font-weight: bold;
 }
 
+/* project formatting */
 .project {
     height: 1em;
     width: 11em;
     float: left;
-}
-
-.project {
     margin-right: 3em;
 }
 
 .floatClear {
     clear: both;
+}
+
+/* general image formatting */
+.item {
+	border-radius: 5px;
+}
+
+/* Style all font awesome icons */
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  color: #000;
+  background: white;
+}
+.fa-twitter {
+  color: #000;
+  background: white;
+}
+.fa-linkedin {
+  color: #000;
+  background: white;
+}
+.fa-github {
+  color: #000;
+  background: white;
+}
+
+/* fancy button animation */
+.button {
+  border-radius: 2px;
+  background-color: #000;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 20px;
+  padding: 15px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
