--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1058,3 +1058,48 @@ div.panel {
         width: 100%;
     }
 }
+
+/* image overlay formatter */
+.container {
+  position: relative;
+  width: 50%;
+}
+
+.image {
+  display: block;
+  width: 70%;
+  height: auto;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 70%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #000;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container:hover .overlay {
+  opacity: 0.9;
+  border-radius: 10px;
+}
+
+.text {
+  color: #fff;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
