--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,122 @@
+.boxjob {
+  border: 2px solid #ccc;
+  background-color: #ffeded;
+  border-radius: 5px;
+  padding: 16px;
+  margin: 16px 0
+}
+
+.boxjob::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.boxjob img {
+  float: left;
+  margin-right: 20px;
+  border-radius: 50%;
+}
+
+.boxjob span {
+  font-size: 20px;
+  margin-right: 15px;
+}
+
+@media (max-width: 500px) {
+  .boxjob {
+      text-align: center;
+  }
+  .boxjob img {
+      margin: auto;
+      float: none;
+      display: block;
+  }
+}
+
+.boxinfo {
+  border: 2px solid #ccc;
+  background-color: #f4fff6;
+  border-radius: 5px;
+  padding: 16px;
+  margin: 16px 0
+}
+
+.boxinfo::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.boxinfo img {
+  float: left;
+  margin-right: 20px;
+  border-radius: 50%;
+}
+
+.boxinfo span {
+  font-size: 20px;
+  margin-right: 15px;
+}
+
+@media (max-width: 500px) {
+  .boxinfo {
+      text-align: center;
+  }
+  .boxinfo img {
+      margin: auto;
+      float: none;
+      display: block;
+  }
+}
+
+.boxinprog {
+  border: 2px solid #ccc;
+  background-color: #f4f8ff;
+  border-radius: 5px;
+  padding: 16px;
+  margin: 16px 0
+}
+
+.boxinprog::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.boxinprog img {
+  float: left;
+  margin-right: 20px;
+  border-radius: 50%;
+}
+
+.boxinprog span {
+  font-size: 20px;
+  margin-right: 15px;
+}
+
+@media (max-width: 500px) {
+  .boxinprog {
+      text-align: center;
+  }
+  .boxinprog img {
+      margin: auto;
+      float: none;
+      display: block;
+  }
+}
+
+
+.lcont {
+	align-content: left;
+}
+
+.pproj {
+	align-content: center;
+	align-self: center;
+	width: 50%;
+}
+
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
