--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1150,8 +1150,8 @@ p.indent {
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 20px;
-	padding: 15px;
-	width: 200px;
+	padding: 10px;
+	/*width: 150px;*/
 	transition: all 0.5s;
 	cursor: pointer;
 	margin: 5px;
